# EdgeDetectionApp

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opencv_processor.cpp
app/src/main/java/com/example/edgedetectionapp/: CameraManager.kt  MainActivity.kt  OpenCVProcessor.kt  OpenGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gl/: OpenGLRenderer.kt
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: app.ts  websocket-mock.ts
